--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lamía Ibrahim</title>
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+
+    body {
+      margin: 0;
+      background: url("img/1.jpg") center/cover no-repeat fixed;
+      font-family: 'Cairo', Arial, sans-serif;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      direction: rtl;
+      background-color: #00000088; /* تقليل الإضاءة للخلفية */
+      position: relative;
+    }
+
+    .container {
+      background: rgba(11, 28, 45, 0.85); /* خلفية داكنة شفافة */
+      padding: 40px 50px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(212, 175, 55, 0.6);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      animation: fadeIn 1.5s ease forwards;
+      max-width: 400px;
+      width: 90%;
+    }
+
+    /* تحسين صورة اللوجو */
+    .logo {
+      width: 100%;
+      max-width: 380px;
+      height: auto;
+      border-radius: 15px;
+      box-shadow: 0 10px 40px rgba(212, 175, 55, 0.8);
+      animation: slideDown 1.2s ease forwards;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.05);
+      box-shadow: 0 15px 60px rgba(212, 175, 55, 1);
+    }
+
+    /* زر تواصل واتساب */
+    .btn {
+      background: linear-gradient(135deg, #d4af37, #f1d27a);
+      color: #0b1c2d;
+      border: none;
+      padding: 16px 50px;
+      border-radius: 50px;
+      font-size: 20px;
+      font-weight: 700;
+      cursor: pointer;
+      box-shadow: 0 10px 30px rgba(212, 175, 55, 0.5);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: slideUp 1.2s ease forwards;
+      letter-spacing: 1.2px;
+    }
+
+    .btn:hover {
+      transform: translateY(-5px) scale(1.1);
+      box-shadow: 0 15px 40px rgba(212, 175, 55, 0.9);
+    }
+
+    .btn:active {
+      transform: scale(0.95);
+    }
+
+    /* أنيميشن */
+    @keyframes slideDown {
+      from {
+        opacity: 0;
+        transform: translateY(-40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    /* موبايل */
+    @media (max-width: 768px) {
+      .logo {
+        max-width: 260px;
+      }
+
+      .btn {
+        font-size: 18px;
+        padding: 14px 40px;
+      }
+
+      .container {
+        padding: 30px 20px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <img src="./img/lomy.jpg" alt="Lamía Ibrahim Logo" class="logo" />
+    <button class="btn" onclick="openWhatsApp()">
+      تواصلي معنا
+    </button>
+  </div>
+
+  <script>
+    function openWhatsApp() {
+      window.location.href = "https://wa.me/201001396008?text=مرحبا%20عايزه%20استفسر";
+    }
+  </script>
+</body>
+  </html>
