--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     body {
       margin: 0;
-      background: url("img/1.jpg") center/cover no-repeat fixed;
+      background: url("img/1jpg") center/cover no-repeat fixed;
       font-family: 'Cairo', Arial, sans-serif;
       overflow: hidden;
       display: flex;
@@ -125,7 +125,7 @@
 
 <body>
   <div class="container">
-    <img src="./img/lomy.jpg" alt="Lamía Ibrahim Logo" class="logo" />
+    <img src="./img/2jpg" alt="Lamía Ibrahim Logo" class="logo" />
     <button class="btn" onclick="openWhatsApp()">
       تواصلي معنا
     </button>
